// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainCard Should render correctly if is editing mode disabled 1`] = `
<Fragment>
  <Card>
    <GithubAvatar
      githubId="piter"
      size={96}
      style={
        Object {
          "display": "block",
          "margin": "0 auto 10px",
        }
      }
    />
    <Title
      level={1}
      style={
        Object {
          "fontSize": 24,
          "margin": 0,
          "textAlign": "center",
        }
      }
    >
      Petr Pervyi
    </Title>
    <Paragraph
      style={
        Object {
          "marginBottom": 20,
          "textAlign": "center",
        }
      }
    >
      <a
        href="https://github.com/piter"
        style={
          Object {
            "fontSize": 16,
            "marginLeft": "-14px",
          }
        }
        target="_blank"
      >
        <ForwardRef(GithubFilled) />
         
        piter
      </a>
    </Paragraph>
    <Paragraph
      style={
        Object {
          "margin": 0,
          "textAlign": "center",
        }
      }
    >
      <span
        style={
          Object {
            "marginLeft": "-14px",
          }
        }
      >
        <ForwardRef(EnvironmentFilled) />
         
        Minsk, Belarus
      </span>
    </Paragraph>
  </Card>
</Fragment>
`;

exports[`MainCard Should render correctly if is editing mode enabled 1`] = `
<Fragment>
  <Card
    actions={
      Array [
        <ForwardRef(EditOutlined)
          onClick={[Function]}
        />,
        <ForwardRef(SettingOutlined)
          onClick={[Function]}
        />,
      ]
    }
  >
    <GithubAvatar
      githubId="piter"
      size={96}
      style={
        Object {
          "display": "block",
          "margin": "0 auto 10px",
        }
      }
    />
    <Title
      level={1}
      style={
        Object {
          "fontSize": 24,
          "margin": 0,
          "textAlign": "center",
        }
      }
    >
      Petr Pervyi
    </Title>
    <Paragraph
      style={
        Object {
          "marginBottom": 20,
          "textAlign": "center",
        }
      }
    >
      <a
        href="https://github.com/piter"
        style={
          Object {
            "fontSize": 16,
            "marginLeft": "-14px",
          }
        }
        target="_blank"
      >
        <ForwardRef(GithubFilled) />
         
        piter
      </a>
    </Paragraph>
    <Paragraph
      style={
        Object {
          "margin": 0,
          "textAlign": "center",
        }
      }
    >
      <span
        style={
          Object {
            "marginLeft": "-14px",
          }
        }
      >
        <ForwardRef(EnvironmentFilled) />
         
        Minsk, Belarus
      </span>
    </Paragraph>
    <PermissionsSettingsDrawer
      hideSettings={[Function]}
      isSettingsVisible={false}
      onPermissionsSettingsChange={[MockFunction]}
    />
    <ProfileSettingsDrawer
      content={
        <Row>
          <Col>
            <Row>
              <Text
                strong={true}
              >
                Name
              </Text>
            </Row>
            <Row
              style={
                Object {
                  "marginTop": 4,
                }
              }
            >
              <Input
                onChange={[Function]}
                placeholder="Firstname Lastname"
                type="text"
                value="Petr Pervyi"
              />
            </Row>
            <Row
              style={
                Object {
                  "marginTop": 24,
                }
              }
            >
              <Text
                strong={true}
              >
                Location
              </Text>
            </Row>
            <Row
              style={
                Object {
                  "marginTop": 4,
                }
              }
            >
              <LocationSelect
                location={
                  Object {
                    "cityName": "Minsk",
                    "countryName": "Belarus",
                  }
                }
                onChange={[Function]}
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
            </Row>
          </Col>
        </Row>
      }
      hideSettings={[Function]}
      isSettingsVisible={false}
    />
  </Card>
</Fragment>
`;
